[tool.poetry]
name = "module08-01"
version = "0.1.0"
description = ""
authors = ["tetianakondra <tatjana.ukon@gmail.com>"]
readme = "README.md"
packages = [{include = "module08_01"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
redis = "^4.5.4"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
